--- a/src/app/modules/comments/components/comment-form/comment-form.component.html
+++ b/src/app/modules/comments/components/comment-form/comment-form.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="p-3">
-        <h6>Post a comment</h6>
+        <h6>{{ getHeading() }}</h6>
     </div>
     <form class="p-3" [formGroup]="commentForm" (ngSubmit)="onSubmit()">
 
