--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,6 +49,13 @@ textarea {
     font-size: 1rem;
 }
 
+.duration {
+    font-size: 11px;
+    font-weight: bold;
+    color: #9E9E9E;
+    font-style: italic;
+}
+
 .user-feed {
     font-size: 14px;
     margin-top: 12px
